Fixes, generated new postman file
