# src/note/note.schema.ts
@@ -1,20 +1,18 @@
 import { Prop, Schema, SchemaFactory } from '@nestjs/mongoose';
 import { Document, Schema as MongooseSchema } from 'mongoose';
-import { Reminder } from '../reminder/reminder.schema';
 
 export type NoteDocument = Note & Document;
 
 @Schema()
 export class Note {
+  @Prop({ type: MongooseSchema.Types.ObjectId, auto: true })
+  _id: MongooseSchema.Types.ObjectId;
+
   @Prop({ required: true })
   title: string;
 
-  @Prop({
-    type: MongooseSchema.Types.ObjectId,
-    ref: 'Reminder',
-    required: true,
-  })
-  reminder: Reminder;
+  @Prop({ type: MongooseSchema.Types.ObjectId, ref: 'Reminder', required: true })
+  reminder: MongooseSchema.Types.ObjectId;
 }
 
 export const NoteSchema = SchemaFactory.createForClass(Note);
